# sgv

./: .gitignore  CMakeLists.txt  main.cpp
include/: mainwindow.hpp
src/: main.cpp  mainwindow.cpp
ui/: mainwindow.ui
